crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__function__empty_body.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/function/empty_body.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f (global @1) [] []
      (block))
   (print (call +2 (global f @1))))

----- stderr -----
