crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__function__too_many_parameters.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/function/too_many_parameters.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f (global @1) [(local a1 @0) (local a2 @1) (local a3 @2) (local a4 @3) (local a5 @4) (local a6 @5) (local a7 @6) (local a8 @7) (local a9 @8) (local a10 @9) (local a11 @10) (local a12 @11) (local a13 @12) (local a14 @13) (local a15 @14) (local a16 @15) (local a17 @16) (local a18 @17) (local a19 @18) (local a20 @19) (local a21 @20) (local a22 @21) (local a23 @22) (local a24 @23) (local a25 @24) (local a26 @25) (local a27 @26) (local a28 @27) (local a29 @28) (local a30 @29) (local a31 @30) (local a32 @31) (local a33 @32) (local a34 @33) (local a35 @34) (local a36 @35) (local a37 @36) (local a38 @37) (local a39 @38) (local a40 @39) (local a41 @40) (local a42 @41) (local a43 @42) (local a44 @43) (local a45 @44) (local a46 @45) (local a47 @46) (local a48 @47) (local a49 @48) (local a50 @49) (local a51 @50) (local a52 @51) (local a53 @52) (local a54 @53) (local a55 @54) (local a56 @55) (local a57 @56) (local a58 @57) (local a59 @58) (local a60 @59) (local a61 @60) (local a62 @61) (local a63 @62) (local a64 @63) (local a65 @64) (local a66 @65) (local a67 @66) (local a68 @67) (local a69 @68) (local a70 @69) (local a71 @70) (local a72 @71) (local a73 @72) (local a74 @73) (local a75 @74) (local a76 @75) (local a77 @76) (local a78 @77) (local a79 @78) (local a80 @79) (local a81 @80) (local a82 @81) (local a83 @82) (local a84 @83) (local a85 @84) (local a86 @85) (local a87 @86) (local a88 @87) (local a89 @88) (local a90 @89) (local a91 @90) (local a92 @91) (local a93 @92) (local a94 @93) (local a95 @94) (local a96 @95) (local a97 @96) (local a98 @97) (local a99 @98) (local a100 @99) (local a101 @100) (local a102 @101) (local a103 @102) (local a104 @103) (local a105 @104) (local a106 @105) (local a107 @106) (local a108 @107) (local a109 @108) (local a110 @109) (local a111 @110) (local a112 @111) (local a113 @112) (local a114 @113) (local a115 @114) (local a116 @115) (local a117 @116) (local a118 @117) (local a119 @118) (local a120 @119) (local a121 @120) (local a122 @121) (local a123 @122) (local a124 @123) (local a125 @124) (local a126 @125) (local a127 @126) (local a128 @127) (local a129 @128) (local a130 @129) (local a131 @130) (local a132 @131) (local a133 @132) (local a134 @133) (local a135 @134) (local a136 @135) (local a137 @136) (local a138 @137) (local a139 @138) (local a140 @139) (local a141 @140) (local a142 @141) (local a143 @142) (local a144 @143) (local a145 @144) (local a146 @145) (local a147 @146) (local a148 @147) (local a149 @148) (local a150 @149) (local a151 @150) (local a152 @151) (local a153 @152) (local a154 @153) (local a155 @154) (local a156 @155) (local a157 @156) (local a158 @157) (local a159 @158) (local a160 @159) (local a161 @160) (local a162 @161) (local a163 @162) (local a164 @163) (local a165 @164) (local a166 @165) (local a167 @166) (local a168 @167) (local a169 @168) (local a170 @169) (local a171 @170) (local a172 @171) (local a173 @172) (local a174 @173) (local a175 @174) (local a176 @175) (local a177 @176) (local a178 @177) (local a179 @178) (local a180 @179) (local a181 @180) (local a182 @181) (local a183 @182) (local a184 @183) (local a185 @184) (local a186 @185) (local a187 @186) (local a188 @187) (local a189 @188) (local a190 @189) (local a191 @190) (local a192 @191) (local a193 @192) (local a194 @193) (local a195 @194) (local a196 @195) (local a197 @196) (local a198 @197) (local a199 @198) (local a200 @199) (local a201 @200) (local a202 @201) (local a203 @202) (local a204 @203) (local a205 @204) (local a206 @205) (local a207 @206) (local a208 @207) (local a209 @208) (local a210 @209) (local a211 @210) (local a212 @211) (local a213 @212) (local a214 @213) (local a215 @214) (local a216 @215) (local a217 @216) (local a218 @217) (local a219 @218) (local a220 @219) (local a221 @220) (local a222 @221) (local a223 @222) (local a224 @223) (local a225 @224) (local a226 @225) (local a227 @226) (local a228 @227) (local a229 @228) (local a230 @229) (local a231 @230) (local a232 @231) (local a233 @232) (local a234 @233) (local a235 @234) (local a236 @235) (local a237 @236) (local a238 @237) (local a239 @238) (local a240 @239) (local a241 @240) (local a242 @241) (local a243 @242) (local a244 @243) (local a245 @244) (local a246 @245) (local a247 @246) (local a248 @247) (local a249 @248) (local a250 @249) (local a251 @250) (local a252 @251) (local a253 @252) (local a254 @253) (local a255 @254) (local a @255)] []
      (block)))

----- stderr -----
